--- a/frontend/src/componentstyles/app.css
+++ b/frontend/src/componentstyles/app.css
@@ -26,7 +26,7 @@ border: 2px solid violet;
     width: 100%;
     text-align: center;
     background-color:white;
-    flex-grow: 1;
+    /* flex-grow: 1; */
     align-content: center;
     border: 1px solid  black;
 
@@ -52,3 +52,28 @@ flex-basis: 90%;
 }
 
 /*  add flex grow and shrink to all items */
+
+
+
+
+
+/* tempjs */
+
+.outermain{
+    border: 1px solid red;
+}
+.outer{
+    height:150px;
+    width:250px;
+    display: flex;
+    flex-direction: row;
+    align-items:flex-end;
+}
+.item{
+    padding: 2px;
+    flex-grow: 1;
+}
+.chatcontainer{
+    width: 100%;
+    height: 100%;
+}
