--- a/templates/all.ejs
+++ b/templates/all.ejs
@@ -9,6 +9,7 @@
 <div id='root'>
 
 </div>
+<script src="http://localhost:5000/socket.io/socket.io.js"></script>
 <script src="main.js"></script>
 </body>
 
