--- a/frontend/src/componentstyles/app.css
+++ b/frontend/src/componentstyles/app.css
@@ -44,11 +44,21 @@ border: 2px solid violet;
 .chat_outer{
     flex-grow: 2;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: flex-end;
 }
 .msg_input{
 flex-basis: 90%;    
+}
+.ib{
+    width: 100%;
+    border:2px solid violet;
+}
+.chatcontainer{
+    height: 150px ;
+    flex-grow: 1;
+    width: 100%;
+    border: 2px solid black ;
 }
 
 /*  add flex grow and shrink to all items */
@@ -73,7 +83,7 @@ flex-basis: 90%;
     padding: 2px;
     flex-grow: 1;
 }
-.chatcontainer{
+/* .chatcontainer{
     width: 100%;
     height: 100%;
-}
+} */
