--- a/server/templates/room.ejs
+++ b/server/templates/room.ejs
@@ -11,10 +11,10 @@
   <script defer src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
   <script src="/socket.io/socket.io.js" defer></script>
   <script src="script.js" defer></script>
-  <title>Document</title>
+  <title>Its Face time</title>
   <style>
     #video-grid{
-      display:grid;
+      display: grid;
       grid-template-columns: repeat(auto-fill,300px);
       grid-auto-rows: 300px;
       justify-content: center;
