end call sorted

--- a/server/templates/room.ejs
+++ b/server/templates/room.ejs
@@ -48,13 +48,13 @@
   <div id="gallery">
     <div id="video-grid"></div>
   </div>
-  <button  id="endbutton">endcall</button>
+  <button  id="endbutton" onclick="ended()">endcall</button>
 </body>
 <script>
   function ended() {
-    // console.log("aamn")
+    console.log("aamn")
     // location.href='localhost:5000/#/endcall'
-    window.location.assign('https://localhost:5000/#/callended')
+    window.location.assign('http://localhost:5000/#/sign-up')
     return;
   }
 </script>
